--- a/Akka.NET/ChildHierarchiesSupervision/ChildHierarchiesSupervision.csproj
+++ b/Akka.NET/ChildHierarchiesSupervision/ChildHierarchiesSupervision.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{31C43446-B6E4-4107-96CA-8F8AA5E81C3E}</ProjectGuid>
+    <ProjectGuid>{D35E6509-F27B-4455-B393-FF88E54386E2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HandlingMessages</RootNamespace>
-    <AssemblyName>HandlingMessages</AssemblyName>
+    <RootNamespace>ChildHierarchiesSupervision</RootNamespace>
+    <AssemblyName>ChildHierarchiesSupervision</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -57,9 +57,13 @@
   <ItemGroup>
     <Compile Include="ConsoleReaderActor.cs" />
     <Compile Include="ConsoleWriteActor.cs" />
+    <Compile Include="FileObserver.cs" />
+    <Compile Include="FileValidatorActor.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TailActor.cs" />
+    <Compile Include="TailCoordinatorActor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
