--- a/Akka.NET/AdressCommunication/AdressCommunication.csproj
+++ b/Akka.NET/AdressCommunication/AdressCommunication.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D35E6509-F27B-4455-B393-FF88E54386E2}</ProjectGuid>
+    <ProjectGuid>{E8D9CD24-DBF5-4524-AC3D-B7B2995FBA1F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChildHierarchiesSupervision</RootNamespace>
-    <AssemblyName>ChildHierarchiesSupervision</AssemblyName>
+    <RootNamespace>WinTail</RootNamespace>
+    <AssemblyName>Lesson1-1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -51,17 +51,16 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleWriterActor.cs" />
     <Compile Include="ConsoleReaderActor.cs" />
-    <Compile Include="ConsoleWriteActor.cs" />
     <Compile Include="FileObserver.cs" />
-    <Compile Include="FileValidatorActor.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileValidatorActor.cs" />
     <Compile Include="TailActor.cs" />
     <Compile Include="TailCoordinatorActor.cs" />
   </ItemGroup>
