--- a/Akka.NET/GithubActors/GithubActors.csproj
+++ b/Akka.NET/GithubActors/GithubActors.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19B4F5E7-3EFC-479A-854B-591BDBFC98B8}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{93D0C836-98C9-45D1-B269-81220060DBB4}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WinTail</RootNamespace>
-    <AssemblyName>Lesson1-1</AssemblyName>
+    <RootNamespace>GithubActors</RootNamespace>
+    <AssemblyName>GithubActors</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,6 +40,10 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Octokit, Version=0.29.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Octokit.0.29.0\lib\net45\Octokit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.4.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -47,26 +51,79 @@
     </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleWriterActor.cs" />
-    <Compile Include="ConsoleReaderActor.cs" />
-    <Compile Include="FileObserver.cs" />
+    <Compile Include="ActorPaths.cs" />
+    <Compile Include="Actors\GithubAuthenticationActor.cs" />
+    <Compile Include="Actors\GithubCommanderActor.cs" />
+    <Compile Include="Actors\GithubCoordinatorActor.cs" />
+    <Compile Include="Actors\RepoResultsActor.cs" />
+    <Compile Include="GithubAuth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GithubAuth.Designer.cs">
+      <DependentUpon>GithubAuth.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GithubProgressStats.cs" />
+    <Compile Include="Actors\GithubValidatorActor.cs" />
+    <Compile Include="Actors\GithubWorkerActor.cs" />
+    <Compile Include="Actors\MainFormActor.cs" />
     <Compile Include="Messages.cs" />
+    <Compile Include="GithubClientFactory.cs" />
+    <Compile Include="LauncherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LauncherForm.Designer.cs">
+      <DependentUpon>LauncherForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FileValidatorActor.cs" />
-    <Compile Include="TailActor.cs" />
-    <Compile Include="TailCoordinatorActor.cs" />
+    <Compile Include="RepoResultsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RepoResultsForm.Designer.cs">
+      <DependentUpon>RepoResultsForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="GithubAuth.resx">
+      <DependentUpon>GithubAuth.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LauncherForm.resx">
+      <DependentUpon>LauncherForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="RepoResultsForm.resx">
+      <DependentUpon>RepoResultsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
