--- a/Akka.NET/GithubActors/packages.config
+++ b/Akka.NET/GithubActors/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Akka" version="1.3.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
+  <package id="Octokit" version="0.29.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
 </packages>
