--- a/Akka.NET/TradeEmulator/TradeEmulator.csproj
+++ b/Akka.NET/TradeEmulator/TradeEmulator.csproj
@@ -63,11 +63,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Account.cs" />
     <Compile Include="Types\Generator.cs" />
+    <Compile Include="Types\MSSQL.cs" />
     <Compile Include="Types\Position.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dbscript\script.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
