--- a/Akka.NET/TradeEmulator/TradeEmulator.csproj
+++ b/Akka.NET/TradeEmulator/TradeEmulator.csproj
@@ -57,7 +57,9 @@
   <ItemGroup>
     <Compile Include="Actor\AccountDeskActor.cs" />
     <Compile Include="Actor\ClosePositionActor.cs" />
+    <Compile Include="Actor\NotifyActor.cs" />
     <Compile Include="Actor\OpenPositionActor.cs" />
+    <Compile Include="Actor\RequestResolverActor.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
