--- a/Akka.NET/Benchmark/Benchmark.csproj
+++ b/Akka.NET/Benchmark/Benchmark.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{57C57ED1-A561-4AA4-BD76-4FABA251A1D7}</ProjectGuid>
+    <ProjectGuid>{AE22D0EB-6A94-4BB0-AA9B-2E652328AC2D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TradeEmulator</RootNamespace>
-    <AssemblyName>TradeEmulator</AssemblyName>
+    <RootNamespace>Benchmark</RootNamespace>
+    <AssemblyName>Benchmark</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Akka, Version=1.3.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Akka.1.3.5\lib\net45\Akka.dll</HintPath>
+    <Reference Include="Akka, Version=1.3.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Akka.1.3.7\lib\net45\Akka.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -55,28 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actor\AccountDeskActor.cs" />
-    <Compile Include="Actor\ClosePositionActor.cs" />
-    <Compile Include="Actor\NotifyActor.cs" />
-    <Compile Include="Actor\OpenPositionActor.cs" />
-    <Compile Include="Actor\OperationActor.cs" />
-    <Compile Include="Actor\RequestResolverActor.cs" />
-    <Compile Include="Actor\TransactionFeeActor.cs" />
-    <Compile Include="Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types\Account.cs" />
-    <Compile Include="Types\Generator.cs" />
-    <Compile Include="Types\MSSQL.cs" />
-    <Compile Include="Types\Position.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="dbscript\script.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
